--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,74 @@
-header{
+body {
+    background-color: bisque;
+    margin: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+header {
+    padding: 40px;
+    text-align: center;
+}
+
+header>img {
+    width: 50%;
+}
+
+nav img {
+    height: 40px;
+}
+
+nav {
+    background-color: grey;
+    margin: 10px;
+    padding: 5px;
+}
+
+nav a {
+    color: white;
+}
+
+.bi-facebook {
+    color: black;
+}
+
+.bi-linkedin {
+    color: black;
+}
+
+.bi-youtube {
+    color: black;
+}
+
+
+.par {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: justify;
+}
+
+li span {
     background-color: red;
+    color: white;
+}
+
+.fundoAzul {
+    background-color: blue;
+}
+
+
+
+
+ol {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+
+ul {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+footer {
+    background-color: grey;
+    margin: 10px;
+    padding: 5px;
     text-align: center;
 }
